background image of product example

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -198,6 +198,7 @@ padding-right: 80px;
 color: #444;
 font-size: 0.8em;
 background-repeat: no-repeat;
+background-size:cover;
 }
 
 .product_example img {
