--- a/public/css/default.css
+++ b/public/css/default.css
@@ -191,9 +191,9 @@ background-image: url(/images/nov-wireTMv3.jpg);
 min-height: 620px;
 margin-left: -40px;
 margin-right: -57px;
-padding-top: 135px;
+padding-top: 15%;
 text-align: left;
-padding-left: 80px;
+padding-left: 8%;
 padding-right: 80px;
 color: #444;
 font-size: 0.8em;
