--- a/public/css/default.css
+++ b/public/css/default.css
@@ -9,6 +9,13 @@ margin-right: 5%;
 .fontsmall {
 	font-size: 14px;
 }
+.twothirds {
+	width: 65%;
+margin-right: 5%;
+}
+.third {
+	width: 30%;
+}
 html {
 height: 100%;
 }
@@ -623,7 +630,7 @@ width: 27%;
 float: right;
 margin: 40px 4%;
 box-sizing: border-box;
-padding: 0 16px 30px;
+padding: 0 16px;
 border: 2px solid #ccc;
 text-align: center;
 border-radius: 4px;
