--- a/public/css/default.css
+++ b/public/css/default.css
@@ -588,13 +588,33 @@ font-weight: bold;
 @-ms-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
-}​
+}
+
 
 /* Opera */
 @-o-keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
-}​
+}
+
+
+/* lifetime heroes */
+
+.lifetimes ul li {
+display: inline-block;
+padding: 5px 10px;
+font-size: 24px;
+}
+.lifetimes ul {
+	padding:0;
+}
+.lifetimes h3 span {
+	display:table;
+	font-size:20px;
+	line-height:1.7;
+	color:#999;
+	font-weight:100;
+}
 
 
 /* USEFUL CLASSES */
